--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ url: # the base hostname & protocol for your site
 author:
 street_address: Greenlaw 313
 city: UNC Chapel Hill
-state: 
-zip_code: 
-country: 
+state: Tue 10:00AM-11:00AM
+zip_code: Fri 1:00PM-3:00PM
+country: Virtual via zoom by appt.
 phone: 
 
 # homepage tiles
