--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -9,7 +9,7 @@ jobs:
   github-pages:
     runs-on: ubuntu-latest
     steps:
-      - using: 'node20'
+      - uses: 'node20'
       - uses: actions/checkout@v2
       - uses:  helaili/jekyll-action@v2
         with:
