--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 title: ENGL
 subtitle: 258
 email: sgotzler@unc.edu
-description: Spring 2024 | M-W 1:25-2:40 PM | Greenlaw Gameroom (GL 316)
+description: Fall 2024 | M-W 1:25-2:40 PM | Greenlaw Gameroom (GL 316)
 baseurl: "/ENGL-258" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: Greenlaw 313
 city: UNC Chapel Hill
-state: Tue 10:00AM-11:00AM
-zip_code: Fri 1:00PM-3:00PM
+state: Tue 03:00PM-04:30PM
+zip_code: Fri 1:00PM-2:30PM
 country: Virtual via zoom by appt.
 phone: 
 
